Getting an image on the screen

--- a/2DAtlasEngine/2DAtlasEngine.vcxproj
+++ b/2DAtlasEngine/2DAtlasEngine.vcxproj
@@ -27,6 +27,9 @@
     <ClInclude Include="inc\AEWindow.hpp" />
     <ClInclude Include="inc\Application.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="rsc\hello_world.bmp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
