Expanded image loading extensions possibility.
Added SDL_Image extension.

--- a/2DAtlasEngine/2DAtlasEngine.vcxproj.filters
+++ b/2DAtlasEngine/2DAtlasEngine.vcxproj.filters
@@ -43,13 +43,13 @@
     <Image Include="rsc\left.bmp">
       <Filter>Fichiers de ressources</Filter>
     </Image>
-    <Image Include="rsc\press.bmp">
-      <Filter>Fichiers de ressources</Filter>
-    </Image>
     <Image Include="rsc\right.bmp">
       <Filter>Fichiers de ressources</Filter>
     </Image>
     <Image Include="rsc\up.bmp">
+      <Filter>Fichiers de ressources</Filter>
+    </Image>
+    <Image Include="rsc\press.png">
       <Filter>Fichiers de ressources</Filter>
     </Image>
   </ItemGroup>
