Added viewport support.
For minimaps and over UI layouts.

--- a/2DAtlasEngine/2DAtlasEngine.vcxproj.filters
+++ b/2DAtlasEngine/2DAtlasEngine.vcxproj.filters
@@ -52,5 +52,8 @@
     <Image Include="rsc\press.png">
       <Filter>Fichiers de ressources</Filter>
     </Image>
+    <Image Include="rsc\minimap.png">
+      <Filter>Fichiers de ressources</Filter>
+    </Image>
   </ItemGroup>
 </Project>
