--- a/2DAtlasEngine/2DAtlasEngine.vcxproj
+++ b/2DAtlasEngine/2DAtlasEngine.vcxproj
@@ -31,6 +31,7 @@
     <Image Include="rsc\down.bmp" />
     <Image Include="rsc\hello_world.bmp" />
     <Image Include="rsc\left.bmp" />
+    <Image Include="rsc\minimap.png" />
     <Image Include="rsc\press.png" />
     <Image Include="rsc\right.bmp" />
     <Image Include="rsc\up.bmp" />
