--- a/2DAtlasEngine/2DAtlasEngine.vcxproj
+++ b/2DAtlasEngine/2DAtlasEngine.vcxproj
@@ -53,6 +53,9 @@
     <Image Include="rsc\images\ui\Inventory.png" />
     <Image Include="rsc\minimap.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Font Include="rsc\fonts\lazy.ttf" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
@@ -106,12 +109,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\Program Files\Microsoft Visual Studio\2022\Libraries\SDL2_image-2.8.2\include;C:\Program Files\Microsoft Visual Studio\2022\Libraries\SDL2-2.30.3\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Program Files\Microsoft Visual Studio\2022\Libraries\SDL2_image-2.8.2\lib\x64;C:\Program Files\Microsoft Visual Studio\2022\Libraries\SDL2-2.30.3\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Program Files\Microsoft Visual Studio\2022\Libraries\SDL2_ttf-2.22.0\include;C:\Program Files\Microsoft Visual Studio\2022\Libraries\SDL2_image-2.8.2\include;C:\Program Files\Microsoft Visual Studio\2022\Libraries\SDL2-2.30.3\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Program Files\Microsoft Visual Studio\2022\Libraries\SDL2_ttf-2.22.0\lib\x64;C:\Program Files\Microsoft Visual Studio\2022\Libraries\SDL2_image-2.8.2\lib\x64;C:\Program Files\Microsoft Visual Studio\2022\Libraries\SDL2-2.30.3\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>C:\Program Files\Microsoft Visual Studio\2022\Libraries\SDL2_image-2.8.2\include;C:\Program Files\Microsoft Visual Studio\2022\Libraries\SDL2-2.30.3\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Program Files\Microsoft Visual Studio\2022\Libraries\SDL2_image-2.8.2\lib\x64;C:\Program Files\Microsoft Visual Studio\2022\Libraries\SDL2-2.30.3\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Program Files\Microsoft Visual Studio\2022\Libraries\SDL2_ttf-2.22.0\include;C:\Program Files\Microsoft Visual Studio\2022\Libraries\SDL2_image-2.8.2\include;C:\Program Files\Microsoft Visual Studio\2022\Libraries\SDL2-2.30.3\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Program Files\Microsoft Visual Studio\2022\Libraries\SDL2_ttf-2.22.0\lib\x64;C:\Program Files\Microsoft Visual Studio\2022\Libraries\SDL2_image-2.8.2\lib\x64;C:\Program Files\Microsoft Visual Studio\2022\Libraries\SDL2-2.30.3\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -151,7 +154,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -168,7 +171,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
