--- a/2DAtlasEngine/2DAtlasEngine.vcxproj
+++ b/2DAtlasEngine/2DAtlasEngine.vcxproj
@@ -19,6 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\RegularTexture.cpp" />
+    <ClCompile Include="src\SpriteTexture.cpp" />
     <ClCompile Include="src\Character.cpp" />
     <ClCompile Include="src\Ground.cpp" />
     <ClCompile Include="src\GameObject.cpp" />
@@ -28,8 +30,10 @@
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Timer.cpp" />
+    <ClCompile Include="src\TextTexture.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="inc\Constants.hpp" />
     <ClInclude Include="inc\Character.hpp" />
     <ClInclude Include="inc\GameObject.hpp" />
     <ClInclude Include="inc\Ground.hpp" />
@@ -38,6 +42,9 @@
     <ClInclude Include="inc\GraphicsEngine.hpp" />
     <ClInclude Include="inc\Application.hpp" />
     <ClInclude Include="inc\Timer.hpp" />
+    <ClInclude Include="inc\TextTexture.hpp" />
+    <ClInclude Include="inc\RegularTexture.hpp" />
+    <ClInclude Include="inc\SpriteTexture.hpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="rsc\background.png" />
