Improvement on scenes + mouse move events
Added XML comments and extended methods to accept both grid or pixel access for Scenes.
Also added overlay to test mouse move events.

--- a/2DAtlasEngine/2DAtlasEngine.vcxproj
+++ b/2DAtlasEngine/2DAtlasEngine.vcxproj
@@ -54,6 +54,7 @@
     <Image Include="rsc\images\environments\Door.png" />
     <Image Include="rsc\images\environments\Floor.png" />
     <Image Include="rsc\images\environments\Grass.png" />
+    <Image Include="rsc\images\environments\overlay.png" />
     <Image Include="rsc\images\environments\Sand.png" />
     <Image Include="rsc\images\environments\TestGround.png" />
     <Image Include="rsc\images\environments\Tomb.png" />
