--- a/2DAtlasEngine/2DAtlasEngine.vcxproj
+++ b/2DAtlasEngine/2DAtlasEngine.vcxproj
@@ -67,6 +67,10 @@
     <Image Include="rsc\images\environments\TombExterior.png" />
     <Image Include="rsc\images\environments\Wall.png" />
     <Image Include="rsc\images\objects\ArkCovenant.png" />
+    <Image Include="rsc\images\objects\BigBox.png" />
+    <Image Include="rsc\images\objects\Box.png" />
+    <Image Include="rsc\images\objects\ReallyBigBox.png" />
+    <Image Include="rsc\images\objects\WideBox.png" />
     <Image Include="rsc\images\ui\BuildInventory.png" />
     <Image Include="rsc\images\ui\PlayInventory.png" />
     <Image Include="rsc\images\ui\Minimap.png" />
